ingress-vh/http/svc1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1-dm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: app1
    spec:
      containers:
        - name: app1-cont
          image: hub.atguigu.com/library/myapp:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: app1 # should be the same as template labels.
