ingress-vh/http/svc2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2-dm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: app2
    spec:
      containers:
        - name: app2-cont
          image: hub.atguigu.com/library/myapp:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: app2 # should be the same as template labels.
