ingress-vh/http/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ing
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.zhaocc1.com
      http:
        paths:
        - path: /*
          backend:
            serviceName: app1-svc # should be the same as svc name.
            servicePort: 80
    - host: www.zhaocc2.com
      http:
        paths:
        - path: /*
          backend:
            serviceName: app2-svc # should be the same as svc name.
            servicePort: 80
